# libkitsune

./: .gitignore  CMakeLists.txt  README.md
example/: example.cpp
include/N1ghtTheF0x/: LibKitsune.hpp
include/N1ghtTheF0x/LibKitsune/: Array.hpp  Date.hpp  Error.hpp  Logger.hpp  Macros.hpp  Math.hpp  Memory.hpp  Numbers.hpp  String.hpp  Threads.hpp  _array.tpp
include/N1ghtTheF0x/LibKitsune/Math/: Random.hpp  Vector.hpp
source/: array.cpp  date.cpp  error.cpp  logger.cpp  memory.cpp  number.cpp  random.cpp  string.cpp  threads.cpp
